<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView2"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_search"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/listView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/my_account"
            android:id="@+id/button3"
            android:layout_above="@+id/button4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/title_my_reservation"
            android:id="@+id/button4"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp" />

    </RelativeLayout>


</RelativeLayout>